Fix word wrap

--- a/src/sass/blocks/form.scss
+++ b/src/sass/blocks/form.scss
@@ -78,7 +78,7 @@
 		overflow-y: auto;
 		min-height: 75px;
 		font-family: config.$userfont;
-		text-wrap: balance;
+		text-wrap: wrap;
 		overflow-wrap: break-word;
 		box-sizing: border-box;
 		content-visibility: auto;
